--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,7 +71,7 @@
                         app:cardUseCompatPadding="true">
 
                         <LinearLayout
-                            android:id="@+id/cardview"
+                            android:id="@+id/hansikFood"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
@@ -124,9 +124,11 @@
                         app:cardUseCompatPadding="true">
 
                         <LinearLayout
+                            android:id="@+id/chineseFood"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:background="?attr/selectableItemBackground"
                             android:orientation="horizontal"
                             android:paddingBottom="@dimen/activity_margin"
                             android:paddingLeft="@dimen/activity_margin"
@@ -174,9 +176,11 @@
                         app:cardUseCompatPadding="true">
 
                         <LinearLayout
+                            android:id="@+id/boonsikFood"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:background="?attr/selectableItemBackground"
                             android:orientation="horizontal"
                             android:paddingBottom="@dimen/activity_margin"
                             android:paddingLeft="@dimen/activity_margin"
@@ -224,9 +228,11 @@
                         app:cardUseCompatPadding="true">
 
                         <LinearLayout
+                            android:id="@+id/chickenFood"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:background="?attr/selectableItemBackground"
                             android:orientation="horizontal"
                             android:paddingBottom="@dimen/activity_margin"
                             android:paddingLeft="@dimen/activity_margin"
@@ -274,9 +280,11 @@
                         app:cardUseCompatPadding="true">
 
                         <LinearLayout
+                            android:id="@+id/fastFood"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:background="?attr/selectableItemBackground"
                             android:orientation="horizontal"
                             android:paddingBottom="@dimen/activity_margin"
                             android:paddingLeft="@dimen/activity_margin"
@@ -325,9 +333,11 @@
                         app:cardUseCompatPadding="true">
 
                         <LinearLayout
+                            android:id="@+id/pizzaFood"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:background="?attr/selectableItemBackground"
                             android:orientation="horizontal"
                             android:paddingBottom="@dimen/activity_margin"
                             android:paddingLeft="@dimen/activity_margin"
@@ -358,6 +368,59 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="피자도 진리입니다"
+                                    android:textColor="@color/textColor"
+                                    android:textSize="12sp"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_margin"
+                        android:layout_marginRight="@dimen/activity_margin"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="5dp"
+                        app:cardPreventCornerOverlap="false"
+                        app:cardUseCompatPadding="true">
+
+                        <LinearLayout
+                            android:id="@+id/japaneseFood"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:background="?attr/selectableItemBackground"
+                            android:orientation="horizontal"
+                            android:paddingBottom="@dimen/activity_margin"
+                            android:paddingLeft="@dimen/activity_margin"
+                            android:paddingRight="25dp"
+                            android:paddingTop="@dimen/activity_margin">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/ic_category_japanese" />
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginLeft="@dimen/activity_margin"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="일식"
+                                    android:textColor="@color/colorPrimary"
+                                    android:textSize="20sp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="초밥, 규동, 돈까스 등"
                                     android:textColor="@color/textColor"
                                     android:textSize="12sp"
                                     android:textStyle="bold" />
