--- a/app/src/main/res/layout/activity_near_food.xml
+++ b/app/src/main/res/layout/activity_near_food.xml
@@ -17,14 +17,26 @@
             android:layout_height="wrap_content" />
 
     </android.support.design.widget.AppBarLayout>
+
     <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_weight="1"
         android:id="@+id/nearRecyclerView"
-        android:layout_height="match_parent"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary">
 
+        <kr.edcan.cardline.views.CartaTagView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:layout_margin="@dimen/margin_8dp"
+            android:text="랜덤으로 고르기"
+            app:themeColor="#FFF" />
     </RelativeLayout>
 </LinearLayout>
