Launch FoodStackActivity when MainButton is Clicked

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#664AA0</color>
+    <color name="colorPrimaryPressed">#744AAE</color>
     <color name="colorPrimaryDark">#563B8F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="textColor">#BDBDBD</color>
