--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:background="@color/colorPrimary">
 
             <LinearLayout
@@ -27,7 +26,7 @@
                     android:layout_height="wrap_content"
                     android:text="오늘은 어떤 음식을\n드시고 싶나요?"
                     android:textColor="#FFF"
-                    android:textSize="22sp"
+                    android:textSize="25sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -438,10 +437,39 @@
             </HorizontalScrollView>
         </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"></LinearLayout>
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/selectRandom"
+                    android:layout_width="250dp"
+                    android:layout_height="60dp"
+                    android:layout_marginBottom="@dimen/activity_margin"
+                    android:background="@drawable/btn_bg_blue_selector"
+                    android:text="랜덤으로 정하기"
+                    android:textColor="#FFF"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/restaurantStack"
+                    android:layout_width="250dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/btn_bg_transparent_selector"
+                    android:text="직접 선택해서 고르기"
+                    android:textColor="@color/textColor"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 </layout>
