[Fix] Fix button shadow crash

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -452,7 +452,7 @@
                     android:id="@+id/selectRandom"
                     android:layout_width="250dp"
                     android:layout_height="60dp"
-                    android:layout_marginBottom="@dimen/activity_margin"
+                    android:layout_margin="@dimen/margin_8dp"
                     android:background="@drawable/btn_bg_blue_selector"
                     android:text="랜덤으로 정하기"
                     android:textColor="#FFF"
@@ -463,6 +463,7 @@
                     android:id="@+id/restaurantStack"
                     android:layout_width="250dp"
                     android:layout_height="60dp"
+                    android:layout_margin="@dimen/margin_8dp"
                     android:background="@drawable/btn_bg_transparent_selector"
                     android:text="직접 선택해서 고르기"
                     android:textColor="@color/textColor"
