--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -41,7 +41,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{content.roadAddress}"
+                android:text="@{content.realAddress}"
                 android:textColor="@color/textColor"
                 android:textSize="13sp" />
         </LinearLayout>
