Implement Geotrans, GeoTransPoint to convert map.getX() to supported type

--- a/app/src/main/res/layout/activity_near_food_map.xml
+++ b/app/src/main/res/layout/activity_near_food_map.xml
@@ -17,7 +17,7 @@
                 android:layout_height="wrap_content" />
         </android.support.design.widget.AppBarLayout>
 
-        <LinearLayout
+        <com.nhn.android.maps.NMapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
