--- a/app/src/main/res/layout/activity_near_food.xml
+++ b/app/src/main/res/layout/activity_near_food.xml
@@ -32,6 +32,7 @@
             android:background="@color/colorPrimary">
 
             <kr.edcan.cardline.views.CartaTagView
+                android:id="@+id/random"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
