--- a/app/src/main/res/layout/activity_user_settings.xml
+++ b/app/src/main/res/layout/activity_user_settings.xml
@@ -23,12 +23,26 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <com.intrusoft.scatter.PieChart
-                android:id="@+id/chart"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/margin_16dp" />
+                android:layout_margin="@dimen/margin_16dp">
+
+                <TextView
+                    android:id="@+id/errorText"
+                    android:textStyle="bold"
+                    android:text="사용자 데이터가 존재하지 않습니다."
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true" />
+
+                <com.intrusoft.scatter.PieChart
+                    android:id="@+id/chart"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_centerInParent="true" />
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -218,8 +232,8 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="12dp"
-                        android:layout_gravity="center">
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="12dp">
 
                         <ImageView
                             android:layout_width="20dp"
@@ -246,11 +260,11 @@
             </LinearLayout>
 
             <View
-                android:layout_marginTop="@dimen/activity_margin"
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginRight="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/activity_margin"
                 android:background="#E2E2E2" />
 
             <TextView
